--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<!--<script src="js/main.js"></script>-->
 	<script src="js/angular.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-	<!-- AngularFire -->
 	<script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/tttController.js"></script>
@@ -22,14 +21,12 @@
 			<!--ng-click to repeat the array. setTile is used to mark the div with 'x'. -->
 			<div ng-click="game.setTile('x', $index)" class="boxes"
 					ng-repeat="tile in game.gameBoard track by $index">
-
-				{{game.getTile($index)}}
-
+				{{game.getTile($index)}}<button>something</button>
 			</div>
+			<button ng-click="game.newGame()">Start a new Game</button>
 
 	</section>
-	<br>
-	<button></button>
+
 </body>
 </html>
 
