added 2 player function. created var currentMarker to prevent player from marking both 'x' and 'o'.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body ng-controller="tttController as game">
 
-	<h1>Ponlok's Tic Tac Toe Game</h1>
+	<h1>Generic Tic Tac Toe Game</h1>
 	<!-- give me the property tttcontroller and print it -->
 	<h2>{{ game.gameSession.message }}</h2>
 	<section id="container">
